--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <p> this is the practice od the bootcamp class 1</p>
-    <h> hello bootcamp</h>
+    <h> hello bootcamp 2020 CLASS 1</h>
 </body>
 </html>
