--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <p> this is the practice od the bootcamp class 1</p>
     <h> hello bootcamp 2020 CLASS1</h>
+    <P> HELLO WORLD</P>
 </body>
 </html>
